--- a/media_content/dbt_project.yml
+++ b/media_content/dbt_project.yml
@@ -34,3 +34,7 @@ models:
     # Config indicated by + and applies to all files under models/example/
     bronze:
       +materialized: view
+    silver:
+      +materialized: view
+    gold:
+      +materialized: table
