Added not null data test for todos-completed

--- a/media_content/models/silver/_media__models.yml
+++ b/media_content/models/silver/_media__models.yml
@@ -114,6 +114,7 @@ models:
       - name: title
       - name: completed
         data_tests:
+          - not_null
           - accepted_values:
               arguments:
                 values: [0, 1]
